# rapier4unity

./: README.md  package.json
Editor/: RapierEntry.cs
Runtime/: NativeLoader.cs  Packages.rapier4unity.Runtime.asmdef  PhysicsEventWrapper.cs  RapierBindings.cs  RapierBinds.cs
Runtime/Components/: RapierConfiguration.cs  RapierFixedJoint.cs  RapierJoint.cs  RapierPrismaticJoint.cs  RapierRevoluteJoint.cs  RapierSphericalJoint.cs
Unity.Rapier4Unity.CodeGen/: ILPPHelpers.cs  PhysicsPostProcessor.cs  SimpleStuffs.cs  Unity.Rapier4Unity.CodeGen.asmdef
build_bin/: librapier_c_bind.d  libunitybridge.d  libunitybridge.dylib
build_bin/macOS/: rapier_c_bind.bundle  unitybridge.bundle
docs~/: readme.md
source~/rapier-c-bind/: Cargo.toml  android_linker.ld  build-debug.bat  build-debug.sh  build-release.bat  build-release.sh  get-build-dependencies.bat  get-build-dependencies.sh  readme.md
source~/rapier-c-bind/export-to-unity-dynamic-binder/: Cargo.toml
source~/rapier-c-bind/export-to-unity-dynamic-binder/src/: main.rs
source~/rapier-c-bind/rapierbind/: Cargo.toml
source~/rapier-c-bind/rapierbind/src/: handles.rs  lib.rs  utils.rs
source~/rapier-c-bind/src/: UnityInterfaceBridge.rs  handles.rs  lib.rs  unity_interface_bridge.rs
source~/rapier-c-bind/unitybridge/: Cargo.toml
source~/rapier-c-bind/unitybridge/src/: lib.rs
