[package]
name = "unitybridge"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
log = "0.4.27"

[target.aarch64-linux-android]
rustflags = [
    "-Clink-args=-Wl,-z,max-page-size=16384",
    "-Clink-args=-Wl,-z,common-page-size=16384",
    "-Clink-args=-Wl,--script=./android_linker.ld"
]